addresses 189 - fixed components alignement when width in browser gets small

--- a/group3_frontend/src/components/homePage/Homepage.css
+++ b/group3_frontend/src/components/homePage/Homepage.css
@@ -4,6 +4,7 @@
     position: relative;
     top:0px;
     padding-left:0px;
+    text-align: center;
 
 
 }
@@ -85,6 +86,7 @@
     padding-left:20px;
     height:400px;
     width:350px;
+    margin-bottom:100px;
 }
 
 
